--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: deploy to production
 
-on: deployment
+on: push
 
 jobs:
   build:
@@ -36,6 +36,8 @@ jobs:
       run: |
         echo ::set-output name=repo::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
         echo ::set-env name=REPO::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
+        REPO=${REPO%-mid}
+        echo $REPO
       shell: bash
 
     - name: Set env
@@ -49,49 +51,49 @@ jobs:
         echo ::set-env name=AWS_SECRET_ACCESS_KEY::$(echo "${{ steps.secrets.outputs.backup-key }}")
       shell: bash
 
-    # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        version: '285.0.0'
-        service_account_email: ${{ steps.secrets.outputs.email }}
-        service_account_key: ${{ steps.secrets.outputs.key }}
+#     # Setup gcloud CLI
+#     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+#       with:
+#         version: '285.0.0'
+#         service_account_email: ${{ steps.secrets.outputs.email }}
+#         service_account_key: ${{ steps.secrets.outputs.key }}
 
-    # Configure gcloud CLI
-    - name: Gcloud set up
-      run: |
-        gsutil --version
-        gsutil -m -h "Cache-Control:public, s-maxage=5" rsync -r -d $BUCKET $DEST_BUCKET
-        gsutil -m rsync -r -d -a public-read $BUCKET $BACKUP
+#     # Configure gcloud CLI
+#     - name: Gcloud set up
+#       run: |
+#         gsutil --version
+#         gsutil -m -h "Cache-Control:public, s-maxage=5" rsync -r -d $BUCKET $DEST_BUCKET
+#         gsutil -m rsync -r -d -a public-read $BUCKET $BACKUP
 
-    - name: Deployment success
-      if: success()
-      uses: deliverybot/deployment-status@master
-      with:
-        state: 'success'
-        token: '${{ github.token }}'
-        environment-url: '${{ env.URL }}'
-        log-url: '${{ env.URL }}'
+#     - name: Deployment success
+#       if: success()
+#       uses: deliverybot/deployment-status@master
+#       with:
+#         state: 'success'
+#         token: '${{ github.token }}'
+#         environment-url: '${{ env.URL }}'
+#         log-url: '${{ env.URL }}'
 
-    - name: Purge Cloudflare Cache
-      if: success()
-      run: |
-        result=$(curl --request GET \
-          --url https://purge-cache.idw.workers.dev/$REPO | jq '.success')
-        if [ "$result" == "true" ]; then exit 0; else exit 1; fi
+#     - name: Purge Cloudflare Cache
+#       if: success()
+#       run: |
+#         result=$(curl --request GET \
+#           --url https://purge-cache.idw.workers.dev/$REPO | jq '.success')
+#         if [ "$result" == "true" ]; then exit 0; else exit 1; fi
 
-    - name: Post To Slack
-      if: success()
-      run: |
-        curl -X POST -H 'Content-type: application/json' --data '{"text":"Successfully deployed to '$URL'!"}' $SLACK_HOOK
+#     - name: Post To Slack
+#       if: success()
+#       run: |
+#         curl -X POST -H 'Content-type: application/json' --data '{"text":"Successfully deployed to '$URL'!"}' $SLACK_HOOK
 
-    - name: Deployment failure
-      if: failure()
-      uses: deliverybot/deployment-status@master
-      with:
-        state: 'failure'
-        token: '${{ github.token }}'
+#     - name: Deployment failure
+#       if: failure()
+#       uses: deliverybot/deployment-status@master
+#       with:
+#         state: 'failure'
+#         token: '${{ github.token }}'
 
-    - name: Post To Slack
-      if: failure()
-      run: |
-        curl -X POST -H 'Content-type: application/json' --data '{"text":"Failed to deploy '$URL!', please check https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} "}' $SLACK_HOOK
+#     - name: Post To Slack
+#       if: failure()
+#       run: |
+#         curl -X POST -H 'Content-type: application/json' --data '{"text":"Failed to deploy '$URL!', please check https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} "}' $SLACK_HOOK
