--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           slack:${{ secrets.PROJECT_ID }}/slack-hook-prod
           staging:${{ secrets.PROJECT_ID}}/staging
           prod:${{ secrets.PROJECT_ID}}/prod
+          mid:${{ secrets.PROJECT_ID}}/mid
           backup-id:${{ secrets.PROJECT_ID }}/backup-id
           backup-key:${{ secrets.PROJECT_ID }}/backup-key
 
@@ -43,12 +44,16 @@ jobs:
         echo ::set-env name=BUCKET::$(echo "gs://${{ steps.secrets.outputs.staging }}/${{ steps.repo.outputs.repo }}")
         echo ::set-env name=SLACK_HOOK::$(echo "${{ steps.secrets.outputs.slack }}")
         echo ::set-env name=DEST_BUCKET::$(echo "gs://${{ steps.secrets.outputs.prod }}/${{ env.REPO }}")
+        [[ ${{ steps.repo.outputs.repo }} == *"-mid" ]] && echo ::set-env name=DEST_BUCKET::$(echo "gs://${{ steps.secrets.outputs.mid }}/${{ env.REPO }}")
         echo ::set-env name=BACKUP::$(echo "s3://${{ steps.secrets.outputs.prod }}/${{ env.REPO }}")
         echo ::set-env name=URL::$(echo "https://${{ env.REPO }}")
         echo ::set-env name=AWS_ACCESS_KEY_ID::$(echo "${{ steps.secrets.outputs.backup-id }}")
         echo ::set-env name=AWS_SECRET_ACCESS_KEY::$(echo "${{ steps.secrets.outputs.backup-key }}")
       shell: bash
 
+    - name: echo env
+      run: |
+        echo $DEST_BUCKET
 #     # Setup gcloud CLI
 #     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
 #       with:
